Fix select spacing

--- a/src/components/scale-select/select.css
+++ b/src/components/scale-select/select.css
@@ -20,8 +20,8 @@
 }
 
 .select-container__select {
-  /*margin: 0;
-  padding: 10px 20px 10px 10px;*/
+  margin: 0;
+  border: 0;
   opacity: 0;
   position: absolute;
   top: 0;
